<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="botton_clear">clear</string>
    <string name="botton_0">0</string>
    <string name="botton_1">1</string>
    <string name="botton_2">2</string>
    <string name="botton_3">3</string>
    <string name="botton_4">4</string>
    <string name="botton_5">5</string>
    <string name="botton_6">6</string>
    <string name="botton_7">7</string>
    <string name="botton_8">8</string>
</resources>
